# internal/router/router.go
@@ -37,6 +37,8 @@ func newRouter() *gin.Engine {
 
 		// 公共接口
 		v1.GET("/category", api.GetCategoryList)
+		v1.GET("/products", api.GetProductList)
+		v1.GET("/product/:id", api.GetProductDetailInfo)
 
 		// 认证
 		auth := v1.Group("/auth")
